--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
 <head>
 <title>Space</title>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
+
 </head>
 <body>
 
   <div class="garden">
   <div class="ball"></div>
-</div>
+  </div>
 
 <pre class="output"></pre>
-
+<script src="javascript.js"></script>
 </body>
 </html>
