--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Space</title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
-<script src="dist/device-capabilities.min.js"></script> <!--https://www.npmjs.com/package/device-capabilities.js-->
+<script src="https://www.npmjs.com/package/device-capabilities.js"></script> <!--https://www.npmjs.com/package/device-capabilities.js-->
 <!-- normalises gyro https://www.npmjs.com/package/gyronorm -->
 </head>
 <body>
