--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <!--https://www.npmjs.com/package/device-capabilities.js-->
 <!-- normalises gyro https://www.npmjs.com/package/gyronorm -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>-->
 </head>
 <body>
 
@@ -18,6 +18,6 @@
 <pre class="output"></pre>
 <pre class="output2"></pre>
 <script src="javascript.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>-->
 </body>
 </html>
