--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
   <!-- Slider main container -->
   <div class="swiper-container">
   <div class="swiper-wrapper">
-    <div class="swiper-slide">Slide 1</div>
+    <div class="swiper-slide">
+      
+        <div class="garden">
+          <div class="ball"></div>
+        </div>
+
+    </div>
     <div class="swiper-slide">Slide 2</div>
     <div class="swiper-slide">Slide 3</div>
     <div class="swiper-slide">Slide 4</div>
@@ -28,12 +34,12 @@
   </div>
 </div>
 
-<!--
+
 BALL AND GARDEN
   <div class="garden">
   <div class="ball"></div>
   </div>
--->
+
 <!--
 Outputs
 <pre class="output"></pre>
