--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
           <div class="ball"></div>
         </div>
 
+</div>
+    <div id="2" class="swiper-slide">Slide 2</div>
+    <div id="3" class="swiper-slide swiper-no-swiping">
+      <p> </p>
     </div>
-    <div class="swiper-slide">Slide 2</div>
-    <div class="swiper-slide">Slide 3</div>
-    <div class="swiper-slide">Slide 4</div>
+    <div id="4" class="swiper-slide">Slide 4</div>
     <div class="swiper-slide">Slide 5</div>
     <div class="swiper-slide">Slide 6</div>
     <div class="swiper-slide">Slide 7</div>
@@ -33,14 +35,6 @@
     <div class="swiper-slide">Slide 10</div>
   </div>
 </div>
-
-
-BALL AND GARDEN
-  <div class="garden">
-  <div class="ball"></div>
-  </div>
-
-
 
 <pre class="output"></pre>
 <pre class="output2"></pre>
@@ -51,6 +45,51 @@ BALL AND GARDEN
 <!-- Initialize Swiper -->
 <script>
   var swiper = new Swiper('.swiper-container');
+  // Get event data
+  function deviceOrientationListener(event) {
+    var alpha    = event.alpha; //z axis rotation [0,360)
+    var beta     = event.beta; //x axis rotation [-180, 180]
+    var gamma    = event.gamma; //y axis rotation [-90, 90]
+    //Check if absolute values have been sent
+    if (typeof event.webkitCompassHeading !== "undefined") {
+      alpha = event.webkitCompassHeading; //iOS non-standard
+      var heading = alpha
+      document.getElementById("Slide3").innerHTML = heading.toFixed([0]);
+    }
+    else {
+      alert("Your device is reporting relative alpha values, so this compass won't point north :(");
+      var heading = 360 - alpha; //heading [0, 360)
+      document.getElementById("Slide3").innerHTML = heading.toFixed([0]);
+    }
+
+    // Change backgroud colour based on heading
+    // Green for North and South, black otherwise
+    if (heading > 359 || heading < 1) { //Allow +- 1 degree
+      document.getElementById("Slide3").style = "green";
+      document.getElementById("Slide3").innerHTML = "N"; // North
+      navigator.vibrate([200, 400, 200]);
+
+    }
+    else if (heading > 179 && heading < 181){ //Allow +- 1 degree
+      document.getElementById("Slide3").style = "green";
+      document.getElementById("Slide3").innerHTML = "S"; // South
+    }
+else { // Otherwise, use near black
+   document.body.style.backgroundColor = "#161616";
+ }
+}
+
+// Check if device can provide absolute orientation data
+if (window.DeviceOrientationAbsoluteEvent) {
+ window.addEventListener("DeviceOrientationAbsoluteEvent", deviceOrientationListener);
+} // If not, check if the device sends any orientation data
+else if(window.DeviceOrientationEvent){
+ window.addEventListener("deviceorientation", deviceOrientationListener);
+} // Send an alert if the device isn't compatible
+else {
+ alert("Sorry, try again on a compatible mobile device!");
+}
+
 </script>
 
 </body>
