--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
     if (typeof event.webkitCompassHeading !== "undefined") {
       alpha = event.webkitCompassHeading; //iOS non-standard
       var heading = alpha;
-      document.getElementById("heading").innerHTML = heading.toFixed([0]);
+      document.getElementById("Slide3").innerHTML = heading.toFixed([0]);
     }
     else {
       alert("Your device is reporting relative alpha values, so this compass won't point north :(");
       var heading = 360 - alpha; //heading [0, 360)
-      document.getElementById("heading").innerHTML = heading.toFixed([0]);
+      document.getElementById("Slide3").innerHTML = heading.toFixed([0]);
     }
 
     // Change backgroud colour based on heading
