--- a/index.html
+++ b/index.html
@@ -47,54 +47,56 @@
   var north = false;
   var swiper = new Swiper('.swiper-container');
   // Get event data
+  swiper.on( 'slideChange', function() {
+    if (swiper.realIndex == 2) {
+      function deviceOrientationListener(event) {
 
-if (swiper.realIndex == 2) {
-  function deviceOrientationListener(event) {
 
+        var alpha    = event.alpha; //z axis rotation [0,360)
+        var beta     = event.beta; //x axis rotation [-180, 180]
+        var gamma    = event.gamma; //y axis rotation [-90, 90]
+        //Check if absolute values have been sent
+        if (typeof event.webkitCompassHeading !== "undefined") {
+          alpha = event.webkitCompassHeading; //iOS non-standard
+          var heading = alpha;
+          document.getElementById("3").innerHTML = heading.toFixed([0]);
+        }
+        else {
+          alert("Your device is reporting relative alpha values, so this compass won't point north :(");
+          var heading = 360 - alpha; //heading [0, 360)
+          document.getElementById("3").innerHTML = heading.toFixed([0]);
+        }
 
-    var alpha    = event.alpha; //z axis rotation [0,360)
-    var beta     = event.beta; //x axis rotation [-180, 180]
-    var gamma    = event.gamma; //y axis rotation [-90, 90]
-    //Check if absolute values have been sent
-    if (typeof event.webkitCompassHeading !== "undefined") {
-      alpha = event.webkitCompassHeading; //iOS non-standard
-      var heading = alpha;
-      document.getElementById("3").innerHTML = heading.toFixed([0]);
+        // Change backgroud colour based on heading
+        // Green for North and South, black otherwise
+        if (heading > 359 || heading < 1) { //Allow +- 1 degree
+          document.getElementById("3").style = "green";
+          document.getElementById("3").innerHTML = "N"; // North
+          navigator.vibrate([200, 400, 200]);
+
+        }
+        else if (heading > 179 && heading < 181){ //Allow +- 1 degree
+          document.getElementById("3").style = "green";
+          document.getElementById("3").innerHTML = "S"; // South
+        }
+    else { // Otherwise, use near black
+       document.body.style.backgroundColor = "#161616";
+     }
     }
+
+    // Check if device can provide absolute orientation data
+    if (window.DeviceOrientationAbsoluteEvent) {
+     window.addEventListener("DeviceOrientationAbsoluteEvent", deviceOrientationListener);
+    } // If not, check if the device sends any orientation data
+    else if(window.DeviceOrientationEvent){
+     window.addEventListener("deviceorientation", deviceOrientationListener);
+    } // Send an alert if the device isn't compatible
     else {
-      alert("Your device is reporting relative alpha values, so this compass won't point north :(");
-      var heading = 360 - alpha; //heading [0, 360)
-      document.getElementById("3").innerHTML = heading.toFixed([0]);
+     alert("Sorry, try again on a compatible mobile device!");
     }
-
-    // Change backgroud colour based on heading
-    // Green for North and South, black otherwise
-    if (heading > 359 || heading < 1) { //Allow +- 1 degree
-      document.getElementById("3").style = "green";
-      document.getElementById("3").innerHTML = "N"; // North
-      navigator.vibrate([200, 400, 200]);
-
     }
-    else if (heading > 179 && heading < 181){ //Allow +- 1 degree
-      document.getElementById("3").style = "green";
-      document.getElementById("3").innerHTML = "S"; // South
-    }
-else { // Otherwise, use near black
-   document.body.style.backgroundColor = "#161616";
- }
-}
+  });
 
-// Check if device can provide absolute orientation data
-if (window.DeviceOrientationAbsoluteEvent) {
- window.addEventListener("DeviceOrientationAbsoluteEvent", deviceOrientationListener);
-} // If not, check if the device sends any orientation data
-else if(window.DeviceOrientationEvent){
- window.addEventListener("deviceorientation", deviceOrientationListener);
-} // Send an alert if the device isn't compatible
-else {
- alert("Sorry, try again on a compatible mobile device!");
-}
-}
 
 </script>
 
