--- a/index.html
+++ b/index.html
@@ -44,14 +44,12 @@
 
 <!-- Initialize Swiper -->
 <script>
-  var north = false;
+  var north = 0;
   var swiper = new Swiper('.swiper-container');
   // Get event data
   swiper.on( 'slideChange', function() {
     if (swiper.realIndex == 2) {
       function deviceOrientationListener(event) {
-
-
         var alpha    = event.alpha; //z axis rotation [0,360)
         var beta     = event.beta; //x axis rotation [-180, 180]
         var gamma    = event.gamma; //y axis rotation [-90, 90]
@@ -73,6 +71,7 @@
           document.getElementById("3").style = "green";
           document.getElementById("3").innerHTML = "N"; // North
           navigator.vibrate([200, 400, 200]);
+          north = 1;
 
         }
         else if (heading > 179 && heading < 181){ //Allow +- 1 degree
@@ -93,6 +92,9 @@
     } // Send an alert if the device isn't compatible
     else {
      alert("Sorry, try again on a compatible mobile device!");
+    }
+    if (north = 1){
+      swiper.swipeTo(newIndex,4)
     }
     }
   });
