change what is in parenthesis swipe to

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
      alert("Sorry, try again on a compatible mobile device!");
     }
     if (north = 1){
-      swiper.swipeTo(newIndex,4)
+      swiper.slideTo(0)
     }
     }
   });
