--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <!-- Initialize Swiper -->
 <script>
   var north = 0;
+  var noNorth = 0;
   var swiper = new Swiper('.swiper-container');
   // Get event data
   swiper.on( 'slideChange', function() {
@@ -71,7 +72,12 @@
           document.getElementById("3").style = "green";
           document.getElementById("3").innerHTML = "N"; // North
           navigator.vibrate([200, 400, 200]);
-          north = 1;
+          if (noNorth == 0){
+            noNorth++
+          } else {
+            north = 1;
+          }
+
 
         }
         else if (heading > 179 && heading < 181){ //Allow +- 1 degree
@@ -94,7 +100,7 @@
      alert("Sorry, try again on a compatible mobile device!");
     }
     if (north = 1){
-      swiper.slideTo(4,0)
+      swiper.slideTo(4, 0)
     }
     }
   });
