--- a/index.html
+++ b/index.html
@@ -25,10 +25,47 @@
 
             var tool = new paper.Tool();
 
-            tool.onMouseDown = function(event) {
+            /*tool.onMouseDown = function(event) {
               console.log("here");
                 myPath.add(event.point);
+            }*/
+
+            function handleOrientation(event) {
+
+              var p = event.absolute;
+              var x = event.beta;  // In degree in the range [-180,180]
+              var y = event.gamma; // In degree in the range [-90,90]
+              var z = event.alpha;
+              var webkit = event.webkitCompassHeading;
+              var accuracy = event.webkitCompassAccuracy;
+              var mag = event.magnetometer
+
+
+              output.innerHTML  = "beta : " + x + "\n";
+              output.innerHTML += "gamma: " + y + "\n";
+              output.innerHTML += "alpha: " + z + "\n";
+              output.innerHTML += "absolute: " + p + "\n";
+              output.innerHTML += "webkit: " + webkit + "\n";
+              output.innerHTML += "accuracy: " + accuracy + "\n";
+
+
+              // Because we don't want to have the device upside down
+              // We constrain the x value to the range [-90,90]
+              //if (x >  90) { x =  90};
+              //if (x < -90) { x = -90};
+
+              // To make computation easier we shift the range of
+              // x and y to [0,180]
+              x += 90;
+              y += 90;
+
+              // 10 is half the size of the ball
+              // It center the positioning point to the center of the ball
+              ball.style.top  = (maxX*x/180 - 10) + "px";
+              ball.style.left = (maxY*y/180 - 10) + "px";
+              myPath.add(event.point);
             }
+
         }
     </script>
 
