--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
               ball.style.left = (maxY*y/180 - 10) + "px";
               myPath.add(event.point);
             }
+            window.addEventListener('deviceorientation', handleOrientation);
 
         }
     </script>
