--- a/index.html
+++ b/index.html
@@ -40,15 +40,6 @@
               var accuracy = event.webkitCompassAccuracy;
               var mag = event.magnetometer
 
-
-              output.innerHTML  = "beta : " + x + "\n";
-              output.innerHTML += "gamma: " + y + "\n";
-              output.innerHTML += "alpha: " + z + "\n";
-              output.innerHTML += "absolute: " + p + "\n";
-              output.innerHTML += "webkit: " + webkit + "\n";
-              output.innerHTML += "accuracy: " + accuracy + "\n";
-
-
               // Because we don't want to have the device upside down
               // We constrain the x value to the range [-90,90]
               //if (x >  90) { x =  90};
@@ -61,8 +52,8 @@
 
               // 10 is half the size of the ball
               // It center the positioning point to the center of the ball
-              ball.style.top  = (maxX*x/180 - 10) + "px";
-              ball.style.left = (maxY*y/180 - 10) + "px";
+              /*ball.style.top  = (maxX*x/180 - 10) + "px";
+              ball.style.left = (maxY*y/180 - 10) + "px";*/
               myPath.add(event.point);
             }
             window.addEventListener('deviceorientation', handleOrientation);
