--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
               /*ball.style.top  = (maxX*x/180 - 10) + "px";
               ball.style.left = (maxY*y/180 - 10) + "px";*/
               myPath.add(event.point);
+              console.log('here: ' + event.point);
             }
             window.addEventListener('deviceorientation', handleOrientation);
 
