--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               // It center the positioning point to the center of the ball
               /*ball.style.top  = (maxX*x/180 - 10) + "px";
               ball.style.left = (maxY*y/180 - 10) + "px";*/
-              myPath.add(event.point);
+              myPath.add(x, y);
               console.log('here: ' + event.point);
             }
             window.addEventListener('deviceorientation', handleOrientation);
