add console.log x and y values

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               /*ball.style.top  = (maxX*x/180 - 10) + "px";
               ball.style.left = (maxY*y/180 - 10) + "px";*/
               myPath.add(x, y);
-              console.log('here: ' + event.point);
+              console.log('here: ' + x + " " + y);
             }
             window.addEventListener('deviceorientation', handleOrientation);
 
