--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 <script type="text/javascript" src="paper-full.min.js"></script>
-<script type="text/javascript" src="animation.js"></script>
+<script type="text/javascript" src="animations.js"></script>
 <!-- Define inlined JavaScript -->
 
 </head>
