--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 </head>
 <body>
-<canvas id="myCanvas" resize>
+
   <!-- Slider main container -->
   <!-- Slider main container -->
   <div class="swiper-container">
   <div class="swiper-wrapper">
     <div class="swiper-slide">
-
+        <div id="myCanvas"></div>
       <!--  <div class="garden">
           <div class="ball"></div>
         </div>-->
@@ -107,6 +107,6 @@
 
 
 </script>
-  </canvas>
+
 </body>
 </html>
