correct  div to canvas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="swiper-container">
   <div class="swiper-wrapper">
     <div class="swiper-slide">
-        <div id="myCanvas"></div>
+        <canvas id="myCanvas"></canvas>
       <!--  <div class="garden">
           <div class="ball"></div>
         </div>-->
