--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
   <div class="swiper-container">
   <div class="swiper-wrapper">
     <div class="swiper-slide">
-        <canvas id="myCanvas"></canvas>
-      <!--  <div class="garden">
+      <div class="garden">
           <div class="ball"></div>
-        </div>-->
+        </div>
 
 </div>
-    <div id="2" class="swiper-slide">Slide 2</div>
+    <div id="2" class="swiper-slide">
+      <canvas id="myCanvas"></canvas>
+
+    </div>
     <div id="3" class="swiper-slide swiper-no-swiping">
       <p> </p>
     </div>
