--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 </div>
     <div id="2" class="swiper-slide">
-      <canvas id="myCanvas"></canvas>
+      <canvas id="myCanvas" style="width: 100%; height: 100%"></canvas>
 
     </div>
     <div id="3" class="swiper-slide swiper-no-swiping">
