--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 <script type="text/javascript" src="paper-full.min.js"></script>
-
+<script type="text/javascript" src="animations.js"></script>
 <!-- Define inlined JavaScript -->
 
 </head>
@@ -25,7 +25,7 @@
 
 </div>
     <div id="2" class="swiper-slide">
-      <canvas id="myCanvas" style="width: 100%; height: 100%"></canvas>
+      <canvas id="myCanvas"></canvas>
 
     </div>
     <div id="3" class="swiper-slide swiper-no-swiping">
@@ -109,6 +109,6 @@
 
 
 </script>
-<script type="text/javascript" src="animations.js"></script>
+
 </body>
 </html>
