--- a/index.html
+++ b/index.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Space</title>
+<title>Something Given</title>
+<!--
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
-<!--https://www.npmjs.com/package/device-capabilities.js-->
-<!-- normalises gyro https://www.npmjs.com/package/gyronorm -->
-
+<!--Swiper-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+<!-- paper js -->
 <script type="text/javascript" src="paper-full.min.js"></script>
-
-<!-- Define inlined JavaScript -->
-<script type="text/javascript" src="paper-full.min.js"></script>
-<!-- Define inlined JavaScript -->
-<script type="text/paperscript" src="bubbles.js" canvas="myCanvas"></script>
+<!-- Line
+<script type="text/javascript" src="animations.js"></script> -->
+<!-- bubble interaction
+<script type="text/paperscript" src="bubbles.js" canvas="myCanvas"></script>-->
 
 </head>
 <body>
-
-  <!-- Slider main container -->
   <!-- Slider main container -->
   <div class="swiper-container">
   <div class="swiper-wrapper">
-    <div class="swiper-slide">
-      <div class="garden">
-          <div class="ball"></div>
-        </div>
-
-</div>
+    <div id="0" class="swiper-slide">
+    </div>
+    <div id="1" class="swiper-slide">
+      <canvas id="myCanvas"></canvas>
+    </div>
     <div id="2" class="swiper-slide">
       <canvas id="myCanvas"></canvas>
-
     </div>
     <div id="3" class="swiper-slide swiper-no-swiping">
       <p> </p>
@@ -43,76 +38,5 @@
     <div class="swiper-slide">Slide 10</div>
   </div>
 </div>
-<!--
-<pre class="output"></pre>
-<pre class="output2"></pre>
-<script src="javascript.js"></script>-->
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-
-<!-- Initialize Swiper -->
-<script>
-  var north = 0;
-  var noNorth = 0;
-  var swiper = new Swiper('.swiper-container');
-  // Get event data
-  swiper.on( 'slideChange', function() {
-    if (swiper.realIndex == 2) {
-      function deviceOrientationListener(event) {
-        var alpha    = event.alpha; //z axis rotation [0,360)
-        var beta     = event.beta; //x axis rotation [-180, 180]
-        var gamma    = event.gamma; //y axis rotation [-90, 90]
-        //Check if absolute values have been sent
-        if (typeof event.webkitCompassHeading !== "undefined") {
-          alpha = event.webkitCompassHeading; //iOS non-standard
-          var heading = alpha;
-          document.getElementById("3").innerHTML = heading.toFixed([0]);
-        }
-        else {
-
-          var heading = 360 - alpha; //heading [0, 360)
-          document.getElementById("3").innerHTML = heading.toFixed([0]);
-        }
-
-        // Change backgroud colour based on heading
-        // Green for North and South, black otherwise
-        if (heading > 359 || heading < 1) { //Allow +- 1 degree
-          document.getElementById("3").style = "green";
-          document.getElementById("3").innerHTML = "N"; // North
-          navigator.vibrate([200, 400, 200]);
-
-            north = 1;
-
-
-        }
-        else if (heading > 179 && heading < 181){ //Allow +- 1 degree
-          document.getElementById("3").style = "green";
-          document.getElementById("3").innerHTML = "S"; // South
-          north = 1;
-          swiper.slideTo(3, 100)
-        }
-    else { // Otherwise, use near black
-       document.body.style.backgroundColor = "#161616";
-     }
-    }
-
-    // Check if device can provide absolute orientation data
-    if (window.DeviceOrientationAbsoluteEvent) {
-     window.addEventListener("DeviceOrientationAbsoluteEvent", deviceOrientationListener);
-    } // If not, check if the device sends any orientation data
-    else if(window.DeviceOrientationEvent){
-     window.addEventListener("deviceorientation", deviceOrientationListener);
-    } // Send an alert if the device isn't compatible
-    else {
-     alert("Sorry, try again on a compatible mobile device!");
-    }
-
-    }
-  });
-
-
-</script>
-
-<!-- <script type="text/javascript" src="animations.js"></script> -->
 </body>
 </html>
