--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Something Given</title>
-<!--
+<!-- css file-->
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <!--Swiper-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
