--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 <script type="text/javascript" src="paper-full.min.js"></script>
-<script type="text/javascript" src="bubbles2.js" canvas="myCanvas"></script>
+<script type="text/paperscript" src="bubbles.js" canvas="myCanvas"></script>
 <!-- Define inlined JavaScript -->
 
 </head>
