--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- paper js -->
 <script type="text/javascript" src="paper-full.min.js"></script>
 <!-- orientation script -->
-<script type="text/javascript" src="orientations.js"></script> -->
+<script type="text/javascript" src="orientations.js"></script> 
 <!-- Line
 <script type="text/javascript" src="animations.js"></script> -->
 <!-- bubble interaction
@@ -53,7 +53,7 @@ window.globals = {
   // Get event data
   swiper.on( 'slideChange', function() {
     if (swiper.realIndex == 1) {
-    
+
   window.addEventListener('deviceorientation', handleOrientation);
 
     }
