--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- paper js -->
 <script type="text/javascript" src="paper-full.min.js"></script>
 <!-- orientation script -->
-<script type="text/javascript" src="orientations.js"></script> 
+<script type="text/javascript" src="orientations.js"></script>
 <!-- Line
 <script type="text/javascript" src="animations.js"></script> -->
 <!-- bubble interaction
@@ -41,6 +41,7 @@
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+<script type="text/javascript" src="orientation.js"></script> 
 <script>
 //initialise globals
 window.onload;
