--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <!-- paper js -->
 <script type="text/javascript" src="paper-full.min.js"></script>
 <!-- orientation script -->
-<script type="text/javascript" src="orientations.js"></script>
-<!-- Line
-<script type="text/javascript" src="animations.js"></script> -->
+<script type="text/javascript" src="orientation.js"></script>
+
 <!-- bubble interaction
 <script type="text/paperscript" src="bubbles.js" canvas="myCanvas"></script>-->
 
@@ -26,12 +25,14 @@
       <canvas id="myCanvas"></canvas>
     </div>
     <div id="2" class="swiper-slide">
-      <canvas id="myCanvas"></canvas>
+      <canvas id="myCanvas2"></canvas>
     </div>
     <div id="3" class="swiper-slide swiper-no-swiping">
       <p> </p>
     </div>
-    <div id="4" class="swiper-slide">Slide 4</div>
+    <div id="4" class="swiper-slide">
+      
+    </div>
     <div class="swiper-slide">Slide 5</div>
     <div class="swiper-slide">Slide 6</div>
     <div class="swiper-slide">Slide 7</div>
@@ -41,7 +42,7 @@
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-<script type="text/javascript" src="orientation.js"></script> 
+<script type="text/javascript" src="orientation.js"></script>
 <script>
 //initialise globals
 window.onload;
@@ -60,7 +61,7 @@ window.globals = {
     }
   });
 </script>
-<script type="text/paperscript" canvas="myCanvas">
+<script type="text/paperscript" canvas="myCanvas2">
 // Ported from original Metaball script by SATO Hiroyuki
 // http://park12.wakwak.com/~shp/lc/et/en_aics_script.html
 
@@ -193,5 +194,7 @@ function getVector(radians, length) {
 }
 
 </script>
+<!-- Line animation script-->
+<script type="text/javascript" src="animations.js"></script>
 </body>
 </html>
