remove orientation listener

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ window.globals = {
   swiper.on( 'slideChange', function() {
     if (swiper.realIndex == 1) {
 
-  window.addEventListener('deviceorientation', handleOrientation);
+  /*window.addEventListener('deviceorientation', handleOrientation);*/
   window.addEventListener("devicemotion", handleMotion, true);
     }
   });
