take away minimal motion

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ window.globals = {
   });
 </script>
 
-<!-- Line animation script-->
-<script type="text/javascript" src="animations.js"></script>
+<!-- Line animation script
+<script type="text/javascript" src="animations.js"></script>-->
 <script type="text/paperscript" canvas="myCanvas3">
 var mousePoint = view.center;
 var amount = 25;
