--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="paper-full.min.js"></script>
 <!-- orientation script -->
 <script type="text/javascript" src="orientation.js"></script>
-
+<script type="text/paperscript" src="square.js" canvas="myCanvas3"></script>
 <!--bubble interaction
 <script type="text/paperscript" src="bubbles.js" canvas="myCanvas2"></script>-->
 
@@ -65,37 +65,6 @@ window.globals = {
 
 <!-- Line animation script
 <script type="text/javascript" src="animations.js"></script>-->
-<script type="text/paperscript" canvas="myCanvas3">
 
-
-
-var mousePoint = view.center;
-var amount = 25;
-var colors = ['red', 'white', 'blue', 'white'];
-
-for (var i = 0; i < amount; i++) {
-	var rect = new Rectangle([0, 0], [25, 25]);
-	rect.center = mousePoint;
-	var path = new Path.Rectangle(rect, 6);
-	path.fillColor = colors[i % 4];
-	var scale = (1 - i / amount) * 20;
-	path.scale(scale);
-}
-
-
-
-var children = project.activeLayer.children;
-function onFrame(event) {
-	for (var i = 0, l = children.length; i < l; i++) {
-		var item = children[i];
-		var delta = (mousePoint - item.position) / (i + 5);
-		item.rotate(Math.sin((event.count + i) / 10) * (globals.gvx*10));
-		if (delta.length > 0.1)
-			item.position += delta;
-	}
-
-}
-
-</script>
 </body>
 </html>
