--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="0" class="swiper-slide">
     </div>
     <div id="1" class="swiper-slide">
-      <canvas id="myCanvas1"></canvas>
+      <canvas id="myCanvas"></canvas>
     </div>
     <div id="2" class="swiper-slide">
       <canvas id="myCanvas2"></canvas>
