--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
 <title>Something Given</title>
 <!-- css file-->
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -30,33 +31,61 @@
         To move on please swipe the page.</div>
         </div>
     </div>
-    <div id="1" class="swiper-slide">
+    <div id="s1" class="swiper-slide">
         <div>
-          <div class="inner-text">You will see a case with wires and a spray attached to the wall.</div>
+          <div class="inner-text">Beside you is a wire case attached to the wall.</div>
           <div class="inner-text">
           Here you can prepare your mobile companion for the pilgrimage ahead. </div>
           <div class="inner-text">(swipe)</div>
         </div>
     </div>
-    <div id="2" class="swiper-slide">
+    <div id="s2" class="swiper-slide">
       <div>
-        <div class="inner-text">You will find some charging wires.</div>
-        <div class="inner-text">How long are you willing to wait to avoid digital blackout? </div>
+        <div class="inner-text">There are some chargers</div>
+        <div class="inner-text">How long are you willing to stand here to avoid digital blackout? </div>
         <div id="battery" class="inner-text"></div>
 
         <div class="inner-text">(swipe)</div>
       </div>
     </div>
-    <div id="3" class="swiper-slide swiper-no-swiping">
-      <p> </p>
+    <div id="s3" class="swiper-slide">
+      <div>
+        <div class="inner-text">When was the last time you cleansed this screen?</div>
+        <div class="inner-text">Dusted away debris from it’s orifices.</div>
+        <div class="inner-text">Where has your mechanical partner been with you?</div>
+      </div>
     </div>
-    <div id="4" class="swiper-slide">
-
+    <div id="s4" class="swiper-slide">
+      <div>
+        <div class="inner-text">You can decorate if you wish</div>
+        <div class="inner-text">Do you think it understands the sentiment of these little faces just like you?
+        </div>
+      </div>
     </div>
-    <div class="swiper-slide">Slide 5</div>
-    <div class="swiper-slide">Slide 6</div>
-    <div class="swiper-slide">Slide 7</div>
-    <div class="swiper-slide"><canvas id="myCanvas3"></canvas></div>
+    <div id= "s5" class="swiper-slide">
+      <div>
+        <div class="inner-text">How much personalisation have you done?</div>
+        <div class="inner-text">This is your confident through which you share, watch, work, socialise and play.</div>
+      </div>
+    </div>
+    <div id= "s6" class="swiper-slide">
+      <div>
+        <div class="inner-text">Listening, tracking, interpreting, predicting and transfers your intimate world.</div>
+        <div class="inner-text">Creating a mishapen shadow.</div>
+    </div>
+  </div>
+    <div id= "s7" class="swiper-slide">
+      <div>
+        <div id="OS" class="inner-text"></div>
+        <div class="inner-text"></div>
+    </div>
+    </div>
+    <div id= "s8" class="swiper-slide">
+      <div>
+        <div class="inner-text">"Whilst you browse on <p id="browser"></p> do you think about the interpretation of your movements?"</div>
+        <div class="inner-text"></div>
+    </div>
+    </div>
 
     <div class="swiper-slide">Slide 9</div>
     <div class="swiper-slide">Slide 10</div>
@@ -92,3 +121,4 @@ window.globals = {
 
 </body>
 </html>
+<!-- swiper-no-swipping-->
