--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     </div>
     <div id= "s8" class="swiper-slide">
       <div>
-        <div class="inner-text">"Whilst you browse on <p id="browser"></p> do you think about the interpretation of your movements?"</div>
-        <div class="inner-text"></div>
+        <div class="inner-text">"Whilst you browse do you ever think about what information is slipping through?"</div>
+        <div id="referrer" class="inner-text"></div>
     </div>
     </div>
 
