why OS not working

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <div id= "s8" class="swiper-slide">
       <div>
-        <div class="inner-text">"Whilst you browse do you ever think about what information is slipping through?"</div>
+        <div class="inner-text">Whilst you browse do you ever think about what information is slipping through?</div>
         <div id="referrer" class="inner-text"></div>
     </div>
     </div>
