--- a/index.html
+++ b/index.html
@@ -83,12 +83,32 @@
     <div id= "s8" class="swiper-slide">
       <div>
         <div class="inner-text">Whilst you browse do you ever think about what information is slipping through?</div>
-        <div id="referrer" class="inner-text"></div>
+        <div class="inner-text">Or do you never think about it?</div>
     </div>
     </div>
 
-    <div class="swiper-slide">Slide 9</div>
-    <div class="swiper-slide">Slide 10</div>
+    <div id= "s9"  class="swiper-slide">
+      <div>
+        <div class="inner-text">Now I would like you to stand a apart from others.</div>
+        <div class="inner-text">This is an experience for you and your own mechanical assistant.</div>
+      </div>
+    </div>
+    <div "s10" class="swiper-slide">
+      <div>
+        <div class="inner-text">You've given substantial immaterial, untangible information away.</div>
+        <div class="inner-text">Small flicks of fingers and bumps in pockets.</div>
+        <div class="inner-text">A tool we cease to acknowledge.</div>
+    </div>
+    </div>
+    <div id="s11" class="swiper-slide">
+      <div>
+        <div class="inner-text">Stand facing the N on the floor.</div>
+        <div class="inner-text">Use the compass on the following screen to find South.</div>
+    </div>
+    </div>
+    <div id="s12" class="swiper-slide swiper-no-swipping">
+      <p class="inner-text"></p>
+    </div>
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
@@ -107,11 +127,13 @@ window.globals = {
   swiper.on( 'slideChange', function() {
     if (swiper.realIndex == 1) {
 
-  window.addEventListener('deviceorientation', handleOrientation);
+
   window.addEventListener("devicemotion", handleMotion, true);
 } else if (swiper.realIndex == 2) {
 
 
+} else if (swiper.realIndex == 12) {
+  window.addEventListener('deviceCompassListener', handleOrientation);
 }
   });
 </script>
@@ -121,4 +143,3 @@ window.globals = {
 
 </body>
 </html>
-<!-- swiper-no-swipping-->
