--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <script type="text/javascript" src="paper-full.min.js"></script>
 <!-- orientation script -->
 <script type="text/javascript" src="orientation.js"></script>
-<!-- rotating squares-->
+<!-- rotating squares-
 <script type="text/paperscript" src="square.js" canvas="myCanvas3"></script>
-<!--bubble interaction-->
-<script type="text/paperscript" src="bubbles.js" canvas="myCanvas2"></script>
+<!--bubble interaction--
+<script type="text/paperscript" src="bubbles.js" canvas="myCanvas2"></script>-->
 
 
 </head>
@@ -126,7 +126,7 @@ window.globals = {
   var swiper = new Swiper('.swiper-container');
   // Get event data
   swiper.on( 'slideChange', function() {
-    console.log(swiper.realIndex);
+    console.log("swiper.realIndex");
     if (swiper.realIndex == 1) {
 
 
