--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@ window.globals = {
 
 
 } else if (swiper.realIndex == 12) {
-  window.addEventListener('deviceCompassListener', handleOrientation);
+
+  window.addEventListener("deviceCompassListener", handleOrientation);
 }
   });
 </script>
