--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ window.globals = {
 
 
 } else if (swiper.realIndex == 12) {
-
+console.log("here");
   window.addEventListener("deviceCompassListener", handleOrientation);
 }
   });
