--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ window.globals = {
 
 } else if (swiper.realIndex == 12) {
 console.log("here");
-  window.addEventListener("deviceCompassListener", handleOrientation);
+  window.addEventListener("deviceorientation", deviceCompassListener);
 }
   });
 </script>
