--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
     <div id="s12" class="swiper-slide swiper-no-swipping">
       <p class="inner-text"></p>
     </div>
+    <div id="s12" class="swiper-slide swiper-no-swipping">
+      <p class="inner-text"></p>
+    </div>
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
