--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         <div class="inner-text">Use the compass on the following screen to find South.</div>
     </div>
     </div>
-    <div id="s12" class="swiper-slide swiper-no-swipping">
+    <div id="s12" class="swiper-slide swiper-no-swiping">
       <p class="inner-text"></p>
     </div>
-    <div id="s13" class="swiper-slide swiper-no-swipping">
+    <div id="s13" class="swiper-slide swiper-no-swiping">
       <p class="inner-text"></p>
     </div>
   </div>
