--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@ window.globals = {
 } else if (swiper.realIndex == 12) {
 console.log("here");
   window.addEventListener("deviceorientation", deviceCompassListener);
+} else if (swiper.realIndex == 15) {
+  window.removeEventListener("deviceorientation", deviceCompassListener);
 }
   });
 </script>
