--- a/index.html
+++ b/index.html
@@ -120,9 +120,15 @@
     </div>
     <div id="s14" class="swiper-slide">
       <div>
-        <div class="inner-text">Now East.</div>
+        <div class="inner-text">Now circle your phone in the air.</div>
       </div>
     </div>
+    <div id="s15" class="swiper-slide">
+      <div>
+        <div class="inner-text">Now circle your phone in the air.</div>
+      </div>
+    </div>
+
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
