take away full stops

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
   <div class="swiper-wrapper">
     <div id="0" class="swiper-slide">
       <div>
-        <div class="inner-text">You are connecting to Something Given.</div>
+        <div class="inner-text">You are connecting to Something Given</div>
         <div class="inner-text">
-        Please follow directions.</div>
+        Please follow directions</div>
         <div class="inner-text">
-        To move on please swipe the page.</div>
+        To move on please swipe the page</div>
         </div>
     </div>
     <div id="s1" class="swiper-slide">
         <div>
-          <div class="inner-text">Beside you is a wire case attached to the wall.</div>
+          <div class="inner-text">Beside you is a wire case attached to the wall</div>
           <div class="inner-text">
-          Here you can prepare your mobile companion for the pilgrimage ahead. </div>
+          Here you can prepare your mobile companion for the pilgrimage ahead</div>
           <div class="inner-text">(swipe)</div>
         </div>
     </div>
@@ -51,7 +51,7 @@
     <div id="s3" class="swiper-slide">
       <div>
         <div class="inner-text">When was the last time you cleansed this screen?</div>
-        <div class="inner-text">Dusted away debris from it’s orifices.</div>
+        <div class="inner-text">Dusted away debris from it’s orifices</div>
         <div class="inner-text">Where has your mechanical partner been with you?</div>
       </div>
     </div>
@@ -65,13 +65,13 @@
     <div id= "s5" class="swiper-slide">
       <div>
         <div class="inner-text">How much personalisation have you done?</div>
-        <div class="inner-text">This is your confident through which you share, watch, work, socialise and play.</div>
+        <div class="inner-text">This is your confident through which you share, watch, work, socialise and play</div>
       </div>
     </div>
     <div id= "s6" class="swiper-slide">
       <div>
-        <div class="inner-text">Listening, tracking, interpreting, predicting and transfers your intimate world.</div>
-        <div class="inner-text">Creating a mishapen shadow.</div>
+        <div class="inner-text">Listening, tracking, interpreting, predicting and transfers your intimate world</div>
+        <div class="inner-text">Creating a mishapen shadow</div>
     </div>
   </div>
     <div id= "s7" class="swiper-slide">
@@ -90,21 +90,21 @@
 
     <div id= "s9"  class="swiper-slide">
       <div>
-        <div class="inner-text">Now I would like you to stand a apart from others.</div>
-        <div class="inner-text">This is an experience for you and your own mechanical assistant.</div>
+        <div class="inner-text">Now I would like you to stand a apart from others</div>
+        <div class="inner-text">This is an experience for you and your own mechanical assistant</div>
       </div>
     </div>
     <div "s10" class="swiper-slide">
       <div>
-        <div class="inner-text">You've given substantial immaterial, untangible information away.</div>
+        <div class="inner-text">You've given substantial immaterial, untangible information away</div>
         <div class="inner-text">Small flicks of fingers and bumps in pockets.</div>
         <div class="inner-text">A tool we cease to acknowledge.</div>
     </div>
     </div>
     <div id="s11" class="swiper-slide">
       <div>
-        <div class="inner-text">Stand facing the N on the floor.</div>
-        <div class="inner-text">Use the compass on the following screen to find South.</div>
+        <div class="inner-text">Stand facing the N on the floor</div>
+        <div class="inner-text">Use the compass on the following screen to find South</div>
     </div>
     </div>
     <div id="s12" class="swiper-slide swiper-no-swiping">
@@ -113,6 +113,7 @@
     <div id="s13" class="swiper-slide">
       <div>
         <div class="inner-text">Now East.</div>
+        <div class="inner-text">(swipe)</div>
       </div>
     </div>
     <div id="s12" class="swiper-slide swiper-no-swiping">
@@ -120,12 +121,12 @@
     </div>
     <div id="s14" class="swiper-slide">
       <div>
-        <div class="inner-text">Now circle your phone in the air.</div>
+        <div class="inner-text">Now circle your phone in the air</div>
       </div>
     </div>
     <div id="s15" class="swiper-slide">
       <div>
-        <div class="inner-text">Now circle your phone in the air.</div>
+        <div class="inner-text">Now circle your phone in the air</div>
       </div>
     </div>
 
