--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
     </div>
     <div id="s13" class="swiper-slide">
       <div>
-        <div class="inner-text">Now East.</div>
-        <div class="inner-text">(swipe)</div>
+        <div class="inner-text">Now circle your phone in the air</div>
+        <div class="inner-text">(swipe when done)</div>
       </div>
     </div>
     <div id="s14" class="swiper-slide swiper-no-swiping">
-      <p class="inner-text"></p>
+
     </div>
     <div id="s15" class="swiper-slide">
       <div>
         <div class="inner-text">Now circle your phone in the air</div>
       </div>
     </div>
-    <div id="s15" class="swiper-slide">
+    <div id="s16" class="swiper-slide">
       <div>
         <div class="inner-text">Now circle your phone in the air</div>
       </div>
@@ -154,10 +154,9 @@ window.globals = {
 } else if (swiper.realIndex == 2) {
 
 
-} else if (swiper.realIndex == 12) {
-console.log("here");
+} else if (swiper.realIndex == 11) {
   window.addEventListener("deviceorientation", deviceCompassListener);
-} else if (swiper.realIndex == 15) {
+} else if (swiper.realIndex == 13) {
   window.removeEventListener("deviceorientation", deviceCompassListener);
 }
   });
