no swiping remove

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="inner-text">(swipe when done)</div>
       </div>
     </div>
-    <div id="s14" class="swiper-slide swiper-no-swiping">
+    <div id="s14" class="swiper-slide">
 
     </div>
     <div id="s15" class="swiper-slide">
