--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="swiper-wrapper">
     <div id="0" class="swiper-slide">
       <div>
-        <div class="inner-text">You are connecting to Something Given</div>
+        <div class="inner-text">You are connecting to Something Given hi</div>
         <div class="inner-text">
         Please follow directions</div>
         <div class="inner-text">
