add animation canvas

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="swiper-wrapper">
     <div id="0" class="swiper-slide">
       <div>
-        <div class="inner-text">You are connecting to Something Given hi</div>
+        <div class="inner-text">You are connecting to Something Given</div>
         <div class="inner-text">
         Please follow directions</div>
         <div class="inner-text">
@@ -117,17 +117,31 @@
       </div>
     </div>
     <div id="s14" class="swiper-slide">
+      <div>
+        <div class="inner-text">Well done</div>
+        <div class="inner-text">Your device is now calibrated</div>
+      </div>
 
     </div>
     <div id="s15" class="swiper-slide">
       <div>
-        <div class="inner-text">Now circle your phone in the air</div>
+        <div class="inner-text">I want you to think of an emotional digital interchange you've had in the last month</div>
+        <div class="inner-text">It can be loving, painful, regretful</div>
       </div>
     </div>
     <div id="s16" class="swiper-slide">
       <div>
-        <div class="inner-text">Now circle your phone in the air</div>
+        <div class="inner-text">Take as long as you need</div>
       </div>
+    </div>
+    <div id="s17" class="swiper-slide">
+      <div>
+        <div class="inner-text">On the next page you will be drawing whilst moving your device</div>
+        <div class="inner-text">Draw your data slipping away from your personal exchange into sentiment algorithms</div>
+      </div>
+    </div>
+    <div id="s18" class="swiper-slide">
+      <canvas id="myCanvas"></canvas>
     </div>
 
   </div>
