--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ window.globals = {
   window.removeEventListener("deviceorientation", deviceCompassListener);
     window.addEventListener("devicemotion", handleMotion, true);
 } else if (swiper.realIndex == 14){
+  console.log("here");
   window.addEventListener("deviceorientation", deviceCompassListener);
   window.removeEventListener("devicemotion", handleMotion, true);
 }
