playing with orientation

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 //initialise globals
 window.onload;
 window.globals = {
-  gx:0, gy:0, gvx:0, gvy:0,
+  gx:0, gy:0, gz:0, gvx:0, gvy:0,
 };
 
   //initialise swiper
