adding square circle

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="paper-full.min.js"></script>
 <!-- orientation script -->
 <script type="text/javascript" src="orientation.js"></script>
-<!-- rotating squares-
+<!-- rotating squares-->
 <script type="text/paperscript" src="square.js" canvas="myCanvas3"></script>
 <!--bubble interaction-->
 <script type="text/paperscript" src="bubbles.js" canvas="myCanvas2"></script>
@@ -148,6 +148,12 @@
     </div>
     <div id="s20" class="swiper-slide">
       <canvas id="myCanvas2"></canvas>
+    </div>
+    <div id="s19" class="swiper-slide">
+
+    </div>
+    <div id="s20" class="swiper-slide">
+      <canvas id="myCanvas3"></canvas>
     </div>
 
   </div>
