--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@ globals.canvasy = window.screen.height;
   // Get event data
   swiper.on( 'slideChange', function() {
 window.addEventListener("devicemotion", handleMotion, true);
-    if (swiper.realIndex == 1) {
-
+    if (swiper.realIndex == 0) {
+window.addEventListener("devicemotion", handleMotion, true);
 } else if (swiper.realIndex == 2) {
 
 
