--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ window.addEventListener("devicemotion", handleMotion, true);
 
 <!-- Line animation script--
 <script type="text/javascript" src="animations.js"></script>-->
-<!--<script type="text/paperscript" canvas="myCanvas4">
+<script type="text/paperscript" canvas="myCanvas4">
 // Adapted from Flocking Processing example by Daniel Schiffman:
 // http://processing.org/learning/topics/flocking.html
 
@@ -478,7 +478,7 @@ function onKeyDown(event) {
  }
 }
 
-</script>-->
+</script>
 
 </body>
 </html>
