--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@ window.addEventListener("devicemotion", handleMotion, true);
   // Get event data
   swiper.on( 'slideChange', function() {
 
+    if (swiper.realIndex == 0) {
 
 } else if (swiper.realIndex == 2) {
 
